--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -85,7 +85,7 @@
 \def\ytext{\quad\text{y}\quad}
 \def\otext{\quad\text{o}\quad}
 
-\newcommand{\llamada}[1]{\stackrel{\cyan{\FiveStar^{#1}}}{} }
+\newcommand{\llamada}[1]{\stackrel{\cyan{\text{\FiveStar}^{#1}}}{} }
 
 % separador\
 \def\separador{\noindent\rule{\linewidth}{0.4pt}\\}
