--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -23,7 +23,7 @@
 % Macro Local
 \newcommand{\polGen}[1]{\sumatoria{i=0}{n} #1_i X^i}
 
-\section{Definiciones y fórmulas útiles}
+\subsubsection*{Definiciones y fórmulas útiles}
 
 \begin{itemize}
 	\item \textit{Operaciones: }
@@ -32,9 +32,9 @@
 		      \item[$+:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \polGen{b}$\\
 		            $\entonces f + g = \sumatoria{i=0}{n} (a_i + b_i) X^i \en \K[X]$
 		      \item[$\cdot:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \sumatoria{j=0}{m} b_j X^j$\\
-                $\entonces f \cdot g = \sumatoria{k=0}{n+m} (\sumatoria{i+j=k}{} a_i \cdot b_j) X^k \en \K[X]$
+		            $\entonces f \cdot g = \sumatoria{k=0}{n+m} (\sumatoria{i+j=k}{} a_i \cdot b_j) X^k \en \K[X]$
 	      \end{itemize}
-        \item $(\K[X],+,\cdot) \text{ es un anillo conmutativo } \to f\cdot(g+h) = f\cdot g + f\cdot h,\, \paratodo f,\,g,\,h \en \K[X]$
+	\item $(\K[X],+,\cdot) \text{ es un anillo conmutativo } \to f\cdot(g+h) = f\cdot g + f\cdot h,\, \paratodo f,\,g,\,h \en \K[X]$
 	\item \textit{Algoritmo de división}: $f,g \en \K[X]$ no nulos, existen únicos $q$ y $R \en \K[X]$ tal que $f = q\cdot g + R$
 	      con $gr(R) < gr(f)$ o $R = 0$
 
@@ -55,7 +55,7 @@
 	      O sea, $f = (X - \alpha)^m \cdot q(\alpha) \distinto 0$
 
 	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f(\alpha) = 0 \sisolosi \alpha$
-      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
+	      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
 
 \end{itemize}
 
@@ -70,73 +70,19 @@
 
 %=========================
 %=========================
-%=========================
-%=========================
-%=========================
-%=========================
 % Ejercicios guia
 %=========================
+%=========================
 
-\section*{Ejercicios de la guía:}
-\setcounter{ejercicio}{0} % Reset the custom counter
+\subsubsection*{Ejercicios de la guía:}
+\setcounter{ejercicio}{0} % Reset el counter de \ejercicio
 
 %1
-\ejercicio
+\input{ej-1-7.tex}
 
 \setcounter{ejercicio}{8}
 %9
-\ejercicio
-Calcular el máximo común divisor entre $f$ y $g$ en $\racionales[X]$ y escribirlo como combinación
-polinomial de $f$ y $g$ siendo:
-%Macro Local
-\def\f1{X^5 + X^3 - 6X^2 + 2X +2}
-\def\g1{X^4 - X^3 - X^2 + 1}
-\begin{enumerate}[label=\roman*)]
-	\item $f = \f1$, $g = \g1$,
-
-	\item $f = X^6 + X^4 + X^2  +1$, $g = X^3 + X$,
-
-	\item $f = 2X^6 - 4X^5 + X^4 + 4X^3 - 6X^2 + 4X + 1$, $g = X^5 - 2X^4 + 2X^2 - 3X + 1$,
-\end{enumerate}
-
-\separadorCorto
-
-
-
-\begin{enumerate}[label=\roman*)]
-	\item
-	      \polylongdiv[style=D]{X^5 + X^3 - 6X^2 + 2X +2}{X^4 - X^3 - X^2 + 1}
-
-	      $\flecha{Euclides} (f:g) = (g : 3X^3 -55X^2 +X + 1)\\
-		      \flecha{escribo a $f$}[en función de $g$]
-		      f = (X+1) \cdot g + 3X^3 -55X^2 +X + 1$
-
-	      \polylongdiv[style=D]{X^4 - X^3 - X^2 + 1}{3X^3 -5X^2 +X + 1}
-
-	      \polylongdiv[style=D]{3X^3 -5X^2 +X + 1}{- \frac{2}{9}X^2-\frac{5}{9}X+\frac{7}{9}}
-
-	      \polylongdiv[style=D]{- \frac{2}{9}X^2-\frac{5}{9}X+\frac{7}{9}}{\frac{171}{4}X - \frac{171}{4}}
-
-	      \polylonggcd{X^5 + X^3 - 6X^2 + 2X +2}{X^4 - X^3 - X^2 + 1}
-
-	      El MCD será el último resto no nulo y mónico \boxed{\to (f : g) = X-1}\\
-
-	      \red{Y ahora tengo que escribir $X-1 = F\cdot f + G\cdot g$?}\\
-	      \red{Algún truco para no lidiar con esas fracciones?}\\
-
-	\item \polylonggcd{X^6 + X^4 + X^2  +1}{X^3 + X}\\
-
-	      El MCD será el último resto no nulo y mónico $\to$\boxed{ (f : g) = X^2+1}\\
-	      El MCD escrito como combinación polinomial de $f$ y $g \to$ \boxed{ X^2 + 1 = f \cdot 1 + g \cdot (-X^3)}
-
-	\item
-	      $\flecha{Haciendo}[Euclides]$
-
-	      \polylonggcd{2X^6 - 4X^5 + X^4 + 4X^3 - 6X^2 + 4X + 1}{X^5 - 2X^4 + 2X^2 - 3X + 1}\\
-	      El MCD será el último resto no nulo y \textit{mónico} $\to$ \boxed{(f : g) = 1}\\
-	      El MCD escrito como combinación polinomial de $f$ y $g \to$ \boxed{1 = \frac{1}{3} g \cdot(2X^2-4X+1) - \frac{1}{3} f \cdot (X-2)}\\
-
-\end{enumerate}
+\input{ej-1-9.tex}
 %
 %
 \end{document}
