--- a/1-sol/1-sol.tex
+++ b/1-sol/1-sol.tex
@@ -556,11 +556,11 @@ siguientes relaciones de $A$ en $B$:
 	\item $(a,b) \en \relacion \sisolosi a\leq b =\\
 		      \set{(1,1), (1,3), (1,5), (1,7), (2,3), (2,5), (2,7), (3,3), (3,5), (3,7)}$
 
-	\item $(a,b) \en \relacion \sisolosi a > b = \set{}\hacer$
+	\item $(a,b) \en \relacion \sisolosi a > b = \set{(2,1), (3, 1)}$
 
 	\item $(a,b) \en \relacion \sisolosi a \cdot b = \set{(2,1), (2,3), (2,5), (2,7)}$
 
-	\item $(a,b) \en \relacion \sisolosi a + b > 6 = \set{}\hacer$
+	\item $(a,b) \en \relacion \sisolosi a + b > 6 = \set{(1,7), (2,5), (2, 7), (3, 5), (3, 7)}$
 \end{enumerate}
 %19
 \ejercicio Sea $A = \set{a,b,c,d,e,f,g,h}$. Para cada uno de los siguientes gráficos describit por
