Terminado ejercicios a archivos

--- a/6-sol/6-sol.tex
+++ b/6-sol/6-sol.tex
@@ -446,10 +446,10 @@ Si $w \en G_n \entonces
 	      $\\
 
 	      También voy a usar que si $w \en G_{11} \entonces \conj w^k = w^{r_{11}(-k)}$\\
-	      $\re\parentesis{\sumatoria{k=0}{60}w^k +\sumatoria{k=0}{60}\conj w^k } \stackrel{\llamada1}=
-		      w^0 + w^1 + w^2 + w^3 + w^4 + w^5 + \conj w^0 + \conj w^1 + \conj w^2 + \conj w^3 + \conj w^4 + \conj w^5 =\\
-		      = w^0 + \ub{w^1 + w^2 + w^3 + w^4 + w^5 + w^0 + w^{10} + w^9 + w^8 + w^7 + w^6}{\sumatoria{k=0}{10} w^k} =
-		      \ub{w^0}{1} + \ub{\sumatoria{k=0}{10} w^k}{= 0} = 1
+          $\re{\sumatoria{k=0}{60}w^k} = \frac{\sumatoria{k=0}{60}w^k +\sumatoria{k=0}{60}\conj w^k}{2} \stackrel{\llamada1}=
+              \frac{w^0 + w^1 + w^2 + w^3 + w^4 + w^5 + \conj w^0 + \conj w^1 + \conj w^2 + \conj w^3 + \conj w^4 + \conj w^5}{2} =\\
+              = \frac{w^0}{2} + \frac{\ob{w^1 + w^2 + w^3 + w^4 + w^5 + w^0 + w^{10} + w^9 + w^8 + w^7 + w^6}{\sumatoria{k=0}{10} w^k}}{2} =
+              \frac{\ob{w^0}{1}}{2} + \frac{\ob{\sumatoria{k=0}{10} w^k}{= 0}}{2} = \frac{1}{2}
 	      $
 \end{enumerate}
 
